[gd_scene load_steps=4 format=3 uid="uid://bldckkq07vflt"]

[ext_resource type="Script" path="res://Scenes/meteor.gd" id="1_58ycf"]
[ext_resource type="AudioStream" uid="uid://b3dk3r65u4iw0" path="res://Audio/sfx_zap.ogg" id="2_jldku"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3kmds"]
radius = 42.5

[node name="Meteor" type="Area2D"]
collision_layer = 2
collision_mask = 9
script = ExtResource("1_58ycf")

[node name="MeteorSprite" type="Sprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_3kmds")

[node name="ExplosionSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_jldku")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
